--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Emocje, aplikacja o emocjach." />
+
+    <TextView
+        android:text="Taki tam tekst"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_marginTop="200dp"
+        android:id="@+id/textView2" />
 </RelativeLayout>
