--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -55,12 +55,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
+        android:layout_marginTop="61dp"
         android:layout_below="@+id/emotion2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="92dp" />
+        android:layout_alignParentStart="true" />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/newPhoto"
+        android:id="@+id/cameraButton"
+        android:layout_alignTop="@+id/spinner"
+        android:layout_alignLeft="@+id/emotion3"
+        android:layout_alignStart="@+id/emotion3" />
 
 
 </RelativeLayout>
