--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -91,4 +91,52 @@
         android:layout_toEndOf="@+id/levelButton"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp" />
+
+    <EditText
+        android:text="Time Limit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_below="@+id/emotion3"
+        android:layout_toRightOf="@+id/emotion3"
+        android:layout_toEndOf="@+id/emotion3"
+        android:layout_marginLeft="166dp"
+        android:layout_marginStart="166dp"
+        android:id="@+id/time_limit" />
+
+    <EditText
+        android:text="Videos/photos per level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="34dp"
+        android:id="@+id/pv_per_limit"
+        android:layout_alignBaseline="@+id/time_limit"
+        android:layout_alignBottom="@+id/time_limit"
+        android:layout_toRightOf="@+id/time_limit"
+        android:layout_toEndOf="@+id/time_limit" />
+
+    <Spinner
+        android:entries="@array/spinner"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner2"
+        android:layout_above="@+id/button_choose_images"
+        android:layout_alignLeft="@+id/time_limit"
+        android:layout_alignStart="@+id/time_limit" />
+
+    <Spinner
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner3"
+        android:layout_alignTop="@+id/levelButton"
+        android:layout_toRightOf="@+id/emotion3"
+        android:layout_toEndOf="@+id/emotion3"
+        android:layout_marginLeft="122dp"
+        android:layout_marginStart="122dp"
+        android:layout_marginTop="12dp" />
+
 </RelativeLayout>
