Moja część (zrobione w 70%)

--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,22 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="match_parent"
+        android:layout_width="500dp"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Dodaj nowy poziom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/list"
+        android:layout_toEndOf="@+id/list"
+        android:layout_marginLeft="56dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="55dp"
+        android:onClick="sendMessage"
+        android:id="@+id/button" />
 </RelativeLayout>
