--- a/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <TableRow>
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
 
-        <TextView
-            android:id="@+id/txt"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+    <TextView
+        android:id="@+id/list_item_string"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:paddingLeft="8dp"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <Button
-            android:text="Edytuj poziom"
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:text="Delete" />
 
-        <Button
-            android:text="Usuń poziom"
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/delete_btn"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:text="Edit" />
 
-        <Button
-            android:text="Aktywuj poziom"
-            android:id="@+id/active"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+    <Button
+        android:id="@+id/active_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/edit_btn"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:text="Add" />
 
-    </TableRow>
-</TableLayout>
+</RelativeLayout>
