--- a/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
@@ -38,6 +38,6 @@
         android:layout_toLeftOf="@id/edit_btn"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:text="Add" />
+        android:text="Active" />
 
 </RelativeLayout>
