--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
@@ -71,10 +71,12 @@
         android:layout_alignEnd="@+id/emotion2"
         android:layout_marginTop="82dp" />
 
-    <Button
-        android:text="ZAPISZ POZIOM"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:src="@drawable/icon_save"
+        android:scaleType="fitXY"
+        android:background="@null"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:id="@+id/levelButton"
         android:onClick="addLevel"
         android:layout_marginTop="32dp"
