--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:text="Dodaj nowy poziom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:src="@drawable/icon_add"
+        android:scaleType="fitXY"
+        android:background="@null"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/list"
         android:layout_toEndOf="@+id/list"
