--- a/PrzyjazneEmocje/app/src/main/res/layout/item.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_width="match_parent"
@@ -14,14 +14,12 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp" />
 
-    <TextView android:id="@+id/txtTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingLeft="60dp"
-        android:textStyle="bold"
-        android:textSize="22sp"
-        android:textColor="#000000"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" />
-</LinearLayout>
+    <CheckBox
+        android:layout_width="178dp"
+        android:layout_height="133dp"
+        android:id="@+id/checkBoxImagesToChoose"
+        android:layout_alignTop="@+id/imgIcon"
+        android:layout_alignParentLeft="@+id/imgIcon"
+        android:layout_alignParentStart="true" />
+
+</RelativeLayout>
