Zamiana buttona na checkboksa w zaznaczaniu, czy level jest aktywny, czy nie.

--- a/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
@@ -44,4 +44,15 @@
         android:layout_marginRight="10dp"
         android:text="Active" />
 
+    <CheckBox
+        android:id="@+id/active_chck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="33dp"
+        android:text="Active"
+        android:layout_marginEnd="33dp"
+        android:layout_alignBottom="@+id/active_btn"
+        android:layout_toLeftOf="@+id/active_btn"
+        android:layout_toStartOf="@+id/active_btn" />
+
 </RelativeLayout>
