--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,16 +11,16 @@
     tools:context="pg.autyzm.graprzyjazneemocje.MainActivity">
 
     <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+    <LinearLayout
+        android:id="@+id/imageGallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txt" />
-
-
-        <LinearLayout
-            android:id="@+id/imageGallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal" />
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
