--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pg.autyzm.graprzyjazneemocje.MainActivity">
 
-    <TextView
-        android:id="@+id/txt"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/rightEmotion"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/imageGallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:gravity="center_horizontal"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        />
 
 </RelativeLayout>
