--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_level_configuration"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -124,13 +124,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/spinner"
             android:text="@string/default_message" />
-        <TextView
-            android:id="@+id/saveMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/spinner"
-            android:visibility="invisible"
-            android:text="@string/save_message" />
     </LinearLayout>
 
     <Spinner
@@ -193,22 +186,33 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
-    <ImageButton
-        android:id="@+id/levelButton"
-        android:layout_width="80dip"
-        android:layout_height="80dip"
-        android:background="@null"
-        android:onClick="addLevel"
-        android:scaleType="fitXY"
-        android:src="@drawable/icon_save" />
-    <ImageButton
-        android:id="@+id/exitButton"
-        android:layout_width="80dip"
-        android:layout_height="80dip"
-        android:background="@null"
-        android:onClick="closee"
-        android:scaleType="fitXY"
-        android:src="@drawable/icon_exit_purple" />
+        <ImageButton
+            android:id="@+id/levelButton"
+            android:layout_width="80dip"
+            android:layout_height="80dip"
+            android:background="@null"
+            android:onClick="addLevel"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_save" />
+        <ImageButton
+            android:id="@+id/exitButton"
+            android:layout_width="80dip"
+            android:layout_height="80dip"
+            android:background="@null"
+            android:onClick="closee"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_exit_purple" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/saveMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="@string/save_message"
+        android:textColor="@color/colorPrimary"
+        android:textSize="25sp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
