--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,26 +11,32 @@
     tools:context="pg.autyzm.przyjazneemocje.MainActivity">
 
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="500dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageButton
-        android:src="@drawable/icon_add"
-        android:scaleType="fitXY"
-        android:background="@null"
+        android:id="@+id/button"
         android:layout_width="80dip"
         android:layout_height="80dip"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/list"
-        android:layout_toEndOf="@+id/list"
-        android:layout_marginLeft="56dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="55dp"
+        android:layout_margin="20dp"
+        android:background="@null"
         android:onClick="sendMessage"
-        android:id="@+id/button" />
+        android:scaleType="fitXY"
+        android:src="@drawable/icon_add" />
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/list_text"
+        android:layout_toLeftOf="@+id/button" />
+
+    <TextView
+        android:id="@+id/list_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="@string/label_level_list"
+        android:textSize="25sp" />
 </RelativeLayout>
