--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/rightEmotion"
+            android:textColor="@color/command"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"/>
